Run VOGE 0x5A heartbeat on BLE session